package com.koreanair.reservation.domain.payment;

/** DP#5 Factory Method — ConcreteProduct: 마일리지 결제. 결제 수단은 서브클래스가 고정한다(setter 불필요). */
public class MileagePayment extends Payment {
    public MileagePayment() {
        super(PaymentMethod.MILEAGE);
    }
}
