@startuml dp5-factory-method
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 0
skinparam linetype polyline
skinparam nodesep 30
skinparam ranksep 60
skinparam defaultFontName "Helvetica Neue"
skinparam defaultFontSize 13
skinparam dpi 150
skinparam class {
  BackgroundColor #FFFFCE
  BorderColor #000000
  BorderThickness 1
  ArrowColor #000000
  ArrowThickness 1
  FontColor #000000
  FontName "Helvetica Neue"
  AttributeFontColor #000000
  AttributeFontName "Helvetica Neue"
  StereotypeFontColor #000000
}
skinparam note {
  BackgroundColor #FFFFFF
  BorderColor #777777
  FontColor #000000
}

title DP#6 Factory Method Pattern - Creator = PaymentMethodProcessor

abstract class PaymentMethodProcessor <<Creator>> {
  -paymentSequence: long {static}
  -gateway: PaymentGatewayInterface
  --
  #PaymentMethodProcessor(gateway: PaymentGatewayInterface)
  +{abstract} createPayment(): Payment
  +{abstract} method(): PaymentMethod
  +processCharge(amount: long, reservationPnr: String): Payment
  #authorize(payment: Payment): boolean
  #declineReason(): String
  #nextPaymentId(): long
  #stamp(payment: Payment, amount: long): Payment
}
abstract class Payment <<Product>> {
  -paymentId: Long
  -amount: BigDecimal
  -paymentMethod: PaymentMethod
  -status: PaymentStatus
  -paidAt: LocalDateTime
  -refunds: List<Refund>
  --
  #Payment(paymentMethod: PaymentMethod)
  +getAmount(): BigDecimal
  +setAmount(amount: BigDecimal): void
  +getPaymentMethod(): PaymentMethod
  +getPaymentId(): Long
  +setPaymentId(paymentId: Long): void
  +getStatus(): PaymentStatus
  +getRefunds(): List<Refund>
  +pay(): void
  +fail(): void
  +addRefund(refund: Refund): void
  +isRefundable(): boolean
}

class CreditCardPaymentProcessor <<ConcreteCreator>> {
  +CreditCardPaymentProcessor(gateway: PaymentGatewayInterface)
  +createPayment(): Payment
  +method(): PaymentMethod
}
class KakaoPayPaymentProcessor <<ConcreteCreator>> {
  +KakaoPayPaymentProcessor(gateway: PaymentGatewayInterface)
  +createPayment(): Payment
  +method(): PaymentMethod
  #declineReason(): String
}
class ApplePayPaymentProcessor <<ConcreteCreator>> {
  +ApplePayPaymentProcessor(gateway: PaymentGatewayInterface)
  +createPayment(): Payment
  +method(): PaymentMethod
  #declineReason(): String
}
class BankTransferPaymentProcessor <<ConcreteCreator>> {
  +BankTransferPaymentProcessor(gateway: PaymentGatewayInterface)
  +createPayment(): Payment
  +method(): PaymentMethod
  #declineReason(): String
}
class MileagePaymentProcessor <<ConcreteCreator>> {
  -account: MileageAccount
  --
  +MileagePaymentProcessor(account: MileageAccount)
  +createPayment(): Payment
  +method(): PaymentMethod
  #authorize(payment: Payment): boolean
}

class CreditCardPayment <<ConcreteProduct>> {
  +CreditCardPayment()
}
class KakaoPayPayment <<ConcreteProduct>> {
  +KakaoPayPayment()
}
class ApplePayPayment <<ConcreteProduct>> {
  +ApplePayPayment()
}
class BankTransferPayment <<ConcreteProduct>> {
  +BankTransferPayment()
}
class MileagePayment <<ConcreteProduct>> {
  +MileagePayment()
}

' Keep the two parents on one rank so the factory-method dependency sits cleanly between them.
PaymentMethodProcessor -[hidden]right- Payment
PaymentMethodProcessor ..> Payment : createPayment()

' Generalizations: ConcreteCreator -|> Creator, ConcreteProduct -|> Product.
PaymentMethodProcessor <|-- CreditCardPaymentProcessor
PaymentMethodProcessor <|-- KakaoPayPaymentProcessor
PaymentMethodProcessor <|-- ApplePayPaymentProcessor
PaymentMethodProcessor <|-- BankTransferPaymentProcessor
PaymentMethodProcessor <|-- MileagePaymentProcessor
Payment <|-- CreditCardPayment
Payment <|-- KakaoPayPayment
Payment <|-- ApplePayPayment
Payment <|-- BankTransferPayment
Payment <|-- MileagePayment

' Order the two 5-wide fans identically so each ..> create arrow runs straight down.
CreditCardPaymentProcessor -[hidden]right- KakaoPayPaymentProcessor
KakaoPayPaymentProcessor -[hidden]right- ApplePayPaymentProcessor
ApplePayPaymentProcessor -[hidden]right- BankTransferPaymentProcessor
BankTransferPaymentProcessor -[hidden]right- MileagePaymentProcessor
CreditCardPayment -[hidden]right- KakaoPayPayment
KakaoPayPayment -[hidden]right- ApplePayPayment
ApplePayPayment -[hidden]right- BankTransferPayment
BankTransferPayment -[hidden]right- MileagePayment

' Each ConcreteCreator instantiates exactly its own ConcreteProduct (factory-method body).
CreditCardPaymentProcessor ..> CreditCardPayment
KakaoPayPaymentProcessor ..> KakaoPayPayment
ApplePayPaymentProcessor ..> ApplePayPayment
BankTransferPaymentProcessor ..> BankTransferPayment
MileagePaymentProcessor ..> MileagePayment

note bottom : Each ConcreteCreator overrides createPayment() to return its own ConcreteProduct, fixed via super(PaymentMethod.X).
@enduml
